<resources>
    <string name="app_name">Sai Pooja Doctor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="payment_type">
        <item>Select Payment Type</item>
        <item>Credit Card</item>
        <item>Debit Card</item>
        <item>Cash</item>
    </string-array>

    <string-array name="schedule_type">
        <item>Morning</item>
        <item>Evening</item>
        <item>Whole Day</item>
    </string-array>


    <string-array name="appoinment_slot">
        <item>Time Slot</item>
        <item>10 Min </item>
        <item>15 Min </item>
        <item>20 Min </item>
        <item>30 Min </item>
        <item>40 Min </item>
        <item>50 Min </item>
        <item>60 Min </item>
    </string-array>

<string name="info">Information Collection and Use:</string>
    <string name="policytext">
The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at SAI POOJA CLINIC unless otherwise defined in this Privacy </string>
<string name="information">For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information. The information that we request will be retained by us and used as described in this privacy policy.</string>
<string name="security">We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.</string>
    <string name="contactsite">our website: www.healyourhealth.in/</string>
    <string name="copyright">Copyright © Nikvay Technology. All rights reserved.</string>
</resources>
